--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,10 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/symfony,phpstorm
 
+
+### Symfony Patch ###
+/web/css/
+/web/js/
+
+# End of https://www.toptal.com/developers/gitignore/api/symfony,phpstorm
+
