--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,12 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        users_in_memory:
+            entity:
+                class: App\Entity\User
+    encoders:
+        App\Entity\User:
+            algorithm: MD5
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -10,6 +15,19 @@ security:
             anonymous: true
             lazy: true
             provider: users_in_memory
+            guard:
+                authenticators:
+                    - App\Security\SignInFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: main_index
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 7776000 #90jours (en secondes)
+                path:  /
+                always_remember_me: true
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
