--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,9 +4,10 @@ security:
         users_in_memory:
             entity:
                 class: App\Entity\User
+                property: username
     encoders:
         App\Entity\User:
-            algorithm: MD5
+            algorithm: auto
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -26,7 +27,6 @@ security:
                 secret: '%kernel.secret%'
                 lifetime: 7776000 #90jours (en secondes)
                 path:  /
-                always_remember_me: true
 
 
             # activate different ways to authenticate
@@ -38,5 +38,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        # - { path: ^/login, roles: IS_AUTHENTICATED_REMEMBERED }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
