Juliette : modification du UserController pour ne pas utiliser les ID dans l'url. Et ajout d'une fonctionnalité de hashage de mot de passe.

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.2.*",
@@ -24,10 +26,13 @@
         "symfony/framework-bundle": "*",
         "symfony/maker-bundle": "^1.29",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "5.2.*",
+        "symfony/property-info": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/requirements-checker": "^2.0",
         "symfony/security-bundle": "5.2.*",
         "symfony/security-csrf": "5.2.*",
+        "symfony/serializer": "5.2.*",
         "symfony/stopwatch": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
