--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,21 +13,22 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            pattern: ^/
             anonymous: true
             lazy: true
             provider: users_in_memory
             guard:
                 authenticators:
                     - App\Security\SignInFormAuthenticator
-
+            switch_user: ~
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: main_index
+                target: app_login
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 7776000 #90jours (en secondes)
-                path:  /
+
 
 
             # activate different ways to authenticate
@@ -39,6 +40,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/login, roles: IS_AUTHENTICATED_REMEMBERED }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
