--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 7776000 #90jours (en secondes)
+                path:   /
 
 
 
