--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,5 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     date:
         timezone: Europe/Paris
+    globals:
+        img_folder: 'ProjetPHPGroupe3/public/uploads/profile_pics'
