--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    profile_pic_directory: '%kernel.project_dir%/public/uploads/profile_pics'
 
 services:
     # default configuration for services in *this* file
@@ -27,5 +28,7 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
