--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -11,6 +11,7 @@ framework:
         save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
         cookie_secure: auto
         cookie_samesite: lax
+        cookie_lifetime: 90000
 
     #esi: true
     #fragments: true
